font correction and card align center

--- a/assets/style.css
+++ b/assets/style.css
@@ -176,7 +176,7 @@ color: #010101;
   font-weight: 400;
   font-size: 18px;
   color: #010101;
-  padding: 6px 20%;
+  padding: 6px 9%;
 }
 
 
